[package]
name = "mask"
version = "0.1.0"
authors = ["wook"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.11.0"
dotenv = "0.15.0"
tgbot = "0.7.1"
job_scheduler = "1.1.0"
